<resources>
    <string name="app_name">Botanique</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="WebViewDefault">Our website!</string>
    <string name="main_Plant_Image_Button">Main Plant</string>
    <string name="main_Light_Image_Button">Main Light</string>
    <string name="main_Water_Image_Button">Main Water</string>
    <string name="main_Temp_Image_Button">Main Temp</string>
    <string name="main_Mud_Image_Button">Main Mud</string>
    <string name="main_Radio_Image_Button">Main Radio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
